--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "@angular/router": "5.2.10",
     "@angular/upgrade": "5.2.10",
     "@covalent/core": "1.0.0",
-    "@fortawesome/fontawesome": "1.1.5",
-    "@fortawesome/fontawesome-free-brands": "5.0.10",
-    "@fortawesome/fontawesome-free-regular": "5.0.10",
-    "@fortawesome/fontawesome-free-solid": "5.0.10",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.6",
+    "@fortawesome/fontawesome": "1.1.6",
+    "@fortawesome/fontawesome-free-brands": "5.0.11",
+    "@fortawesome/fontawesome-free-regular": "5.0.11",
+    "@fortawesome/fontawesome-free-solid": "5.0.11",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.7",
     "@webcomponents/custom-elements": "1.1.0",
     "angular-in-memory-web-api": "0.6.0",
-    "bootstrap": "4.1.0",
+    "bootstrap": "4.1.1",
     "clarity-angular": "0.10.27",
     "clarity-icons": "0.10.27",
     "clarity-ui": "0.10.27",
@@ -49,14 +49,15 @@
     "es6-shim": "0.35.3",
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "moment": "2.22.1",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "2.0.4",
-    "ngx-logger": "2.2.3",
-    "primeng": "5.2.4",
+    "ngx-logger": "3.0.0-rc1",
+    "primeng": "5.2.5",
     "reflect-metadata": "0.1.12",
-    "rxjs": "5.5.10",
+    "rxjs": "6.0.0",
+    "rxjs-compat": "^6.0.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -65,7 +66,7 @@
     "@angular/language-service": "5.2.10",
     "@compodoc/compodoc": "1.1.2",
     "@types/jasmine": "2.8.6",
-    "@types/node": "9.6.6",
+    "@types/node": "10.0.2",
     "bootstrap-sass": "3.3.7",
     "codelyzer": "4.3.0",
     "concurrently": "3.5.1",
@@ -80,13 +81,13 @@
     "karma-jasmine-html-reporter": "1.0.0",
     "lite-server": "2.3.0",
     "modernizr": "3.6.0",
-    "node-sass": "4.8.3",
-    "npm-check-updates": "2.14.1",
+    "node-sass": "4.9.0",
+    "npm-check-updates": "2.14.2",
     "prettier": "1.12.1",
     "protractor": "5.3.1",
     "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
-    "ts-node": "6.0.0",
+    "ts-node": "6.0.2",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.12.0",
     "typescript": "2.8.3",
