--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "0.5.13",
-    "@angular/animations": "6.0.0-rc.6",
-    "@angular/cdk": "6.0.0-rc.14",
-    "@angular/common": "6.0.0-rc.6",
-    "@angular/compiler": "6.0.0-rc.6",
-    "@angular/core": "6.0.0-rc.6",
+    "@angular-devkit/build-angular": "0.6.0",
+    "@angular/animations": "6.0.0",
+    "@angular/cdk": "6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/core": "6.0.0",
     "@angular/flex-layout": "5.0.0-beta.14",
-    "@angular/forms": "6.0.0-rc.6",
-    "@angular/material": "6.0.0-rc.14",
-    "@angular/platform-browser": "6.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "6.0.0-rc.6",
-    "@angular/platform-server": "6.0.0-rc.6",
-    "@angular/router": "6.0.0-rc.6",
-    "@angular/upgrade": "6.0.0-rc.6",
+    "@angular/forms": "6.0.0",
+    "@angular/material": "6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
+    "@angular/upgrade": "6.0.0",
     "@covalent/core": "1.0.0",
-    "@fortawesome/fontawesome": "1.1.6",
-    "@fortawesome/fontawesome-free-brands": "5.0.11",
-    "@fortawesome/fontawesome-free-regular": "5.0.11",
-    "@fortawesome/fontawesome-free-solid": "5.0.11",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.7",
+    "@fortawesome/fontawesome": "1.1.7",
+    "@fortawesome/fontawesome-free-brands": "5.0.12",
+    "@fortawesome/fontawesome-free-regular": "5.0.12",
+    "@fortawesome/fontawesome-free-solid": "5.0.12",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.8",
     "@webcomponents/custom-elements": "1.1.0",
     "angular-in-memory-web-api": "0.6.0",
     "bootstrap": "4.1.1",
@@ -57,15 +57,15 @@
     "ngx-logger": "3.0.0-rc1",
     "primeng": "5.2.5",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.0.0",
+    "rxjs": "6.1.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0-rc.9",
-    "@angular/compiler-cli": "6.0.0-rc.6",
-    "@angular/language-service": "6.0.0-rc.6",
+    "@angular/cli": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/language-service": "6.0.0",
     "@compodoc/compodoc": "1.1.2",
-    "@types/jasmine": "2.8.6",
+    "@types/jasmine": "2.8.7",
     "@types/node": "10.0.3",
     "codelyzer": "4.3.0",
     "concurrently": "3.5.1",
