--- a/package.json
+++ b/package.json
@@ -20,53 +20,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "0.6.0",
-    "@angular/animations": "6.0.0",
-    "@angular/cdk": "6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/core": "6.0.0",
+    "@angular-devkit/build-angular": "0.6.3",
+    "@angular/animations": "6.0.2",
+    "@angular/cdk": "6.0.2",
+    "@angular/common": "6.0.2",
+    "@angular/compiler": "6.0.2",
+    "@angular/core": "6.0.2",
     "@angular/flex-layout": "5.0.0-beta.14",
-    "@angular/forms": "6.0.0",
-    "@angular/material": "6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/platform-server": "6.0.0",
-    "@angular/router": "6.0.0",
-    "@angular/upgrade": "6.0.0",
+    "@angular/forms": "6.0.2",
+    "@angular/material": "6.0.2",
+    "@angular/platform-browser": "6.0.2",
+    "@angular/platform-browser-dynamic": "6.0.2",
+    "@angular/platform-server": "6.0.2",
+    "@angular/router": "6.0.2",
+    "@angular/upgrade": "6.0.2",
     "@covalent/core": "1.0.0",
-    "@fortawesome/fontawesome": "1.1.7",
-    "@fortawesome/fontawesome-free-brands": "5.0.12",
-    "@fortawesome/fontawesome-free-regular": "5.0.12",
-    "@fortawesome/fontawesome-free-solid": "5.0.12",
-    "@fortawesome/fontawesome-free-webfonts": "1.0.8",
-    "@webcomponents/custom-elements": "1.1.0",
+    "@fortawesome/fontawesome": "1.1.8",
+    "@fortawesome/fontawesome-free-brands": "5.0.13",
+    "@fortawesome/fontawesome-free-regular": "5.0.13",
+    "@fortawesome/fontawesome-free-solid": "5.0.13",
+    "@fortawesome/fontawesome-free-webfonts": "1.0.9",
+    "@webcomponents/custom-elements": "1.1.1",
     "angular-in-memory-web-api": "0.6.0",
     "bootstrap": "4.1.1",
     "clarity-angular": "0.10.27",
     "clarity-icons": "0.10.27",
     "clarity-ui": "0.10.27",
-    "core-js": "2.5.5",
+    "core-js": "2.5.6",
     "es6-shim": "0.35.3",
     "flag-icon-css": "3.0.0",
     "jquery": "3.3.1",
     "lodash": "4.17.10",
     "moment": "2.22.1",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "2.0.4",
+    "ngx-bootstrap": "3.0.0",
     "ngx-logger": "3.0.0-rc1",
-    "primeng": "5.2.5",
+    "primeng": "6.0.0-alpha.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.1.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/language-service": "6.0.0",
-    "@compodoc/compodoc": "1.1.2",
+    "@angular/cli": "6.0.3",
+    "@angular/compiler-cli": "6.0.2",
+    "@angular/language-service": "6.0.2",
+    "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.7",
-    "@types/node": "10.0.4",
+    "@types/node": "10.1.2",
     "codelyzer": "4.3.0",
     "concurrently": "3.5.1",
     "jasmine-core": "3.1.0",
@@ -75,18 +75,18 @@
     "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.4.2",
+    "karma-coverage-istanbul-reporter": "2.0.0",
     "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.0.0",
+    "karma-jasmine-html-reporter": "1.1.0",
     "lite-server": "2.3.0",
     "modernizr": "3.6.0",
     "node-sass": "4.9.0",
     "npm-check-updates": "2.14.2",
     "prettier": "1.12.1",
-    "protractor": "5.3.1",
-    "stylelint": "9.2.0",
+    "protractor": "5.3.2",
+    "stylelint": "9.2.1",
     "stylelint-config-standard": "18.2.0",
-    "ts-node": "6.0.2",
+    "ts-node": "6.0.3",
     "tslint": "5.10.0",
     "tslint-config-prettier": "1.12.0",
     "typescript": "2.7.2",
