--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.3",
-    "@angular/cdk": "6.2.0",
-    "@angular/common": "6.0.3",
-    "@angular/compiler": "6.0.3",
-    "@angular/core": "6.0.3",
-    "@angular/flex-layout": "5.0.0-beta.14",
-    "@angular/forms": "6.0.3",
-    "@angular/material": "6.2.0",
-    "@angular/platform-browser": "6.0.3",
-    "@angular/platform-browser-dynamic": "6.0.3",
-    "@angular/platform-server": "6.0.3",
-    "@angular/router": "6.0.3",
-    "@angular/upgrade": "6.0.3",
+    "@angular/animations": "6.0.5",
+    "@angular/cdk": "6.2.1",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/flex-layout": "6.0.0-beta.16",
+    "@angular/forms": "6.0.5",
+    "@angular/material": "6.2.1",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
+    "@angular/router": "6.0.5",
+    "@angular/upgrade": "6.0.5",
     "@covalent/core": "1.0.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
     "@fortawesome/fontawesome-free-regular": "5.0.13",
     "@fortawesome/fontawesome-free-solid": "5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-    "@webcomponents/custom-elements": "1.1.1",
+    "@webcomponents/custom-elements": "1.1.2",
     "angular-in-memory-web-api": "0.6.0",
     "bootstrap": "4.1.1",
     "clarity-angular": "0.10.28",
@@ -54,20 +54,20 @@
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "3.0.0",
     "ngx-logger": "3.0.0-rc1",
-    "primeng": "6.0.0-alpha.1",
+    "primeng": "6.0.0-rc.1",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.2.0",
+    "rxjs": "6.2.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.0-beta.1",
-    "@angular-devkit/core": "0.7.0-beta.1",
-    "@angular/cli": "6.0.7",
-    "@angular/compiler-cli": "6.0.3",
-    "@angular/language-service": "6.0.3",
+    "@angular-devkit/build-angular": "0.6.8",
+    "@angular-devkit/core": "0.6.8",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/language-service": "6.0.5",
     "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.8",
-    "@types/node": "10.3.0",
+    "@types/node": "10.3.3",
     "codelyzer": "4.3.0",
     "concurrently": "3.5.1",
     "jasmine-core": "3.1.0",
@@ -83,11 +83,11 @@
     "modernizr": "3.6.0",
     "node-sass": "4.9.0",
     "npm-check-updates": "2.14.2",
-    "prettier": "1.13.4",
+    "prettier": "1.13.5",
     "protractor": "5.3.2",
     "stylelint": "9.2.1",
     "stylelint-config-standard": "18.2.0",
-    "ts-node": "6.0.5",
+    "ts-node": "6.1.1",
     "tslint": "5.10.0",
     "tslint-config-prettier": "1.13.0",
     "typescript": "2.7.2",
