--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.5",
-    "@angular/cdk": "6.2.1",
-    "@angular/common": "6.0.5",
-    "@angular/compiler": "6.0.5",
-    "@angular/core": "6.0.5",
+    "@angular/animations": "6.0.6",
+    "@angular/cdk": "6.3.0",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/core": "6.0.6",
     "@angular/flex-layout": "6.0.0-beta.16",
-    "@angular/forms": "6.0.5",
-    "@angular/material": "6.2.1",
-    "@angular/platform-browser": "6.0.5",
-    "@angular/platform-browser-dynamic": "6.0.5",
-    "@angular/platform-server": "6.0.5",
-    "@angular/router": "6.0.5",
-    "@angular/upgrade": "6.0.5",
+    "@angular/forms": "6.0.6",
+    "@angular/material": "6.3.0",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/platform-server": "6.0.6",
+    "@angular/router": "6.0.6",
+    "@angular/upgrade": "6.0.6",
     "@covalent/core": "1.0.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -52,9 +52,9 @@
     "lodash": "4.17.10",
     "moment": "2.22.2",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "3.0.0",
-    "ngx-logger": "3.0.0-rc1",
-    "primeng": "6.0.0-rc.1",
+    "ngx-bootstrap": "3.0.1",
+    "ngx-logger": "3.0.4",
+    "primeng": "6.0.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.2.1",
     "zone.js": "0.8.26"
@@ -63,17 +63,17 @@
     "@angular-devkit/build-angular": "0.6.8",
     "@angular-devkit/core": "0.6.8",
     "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.5",
-    "@angular/language-service": "6.0.5",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular/language-service": "6.0.6",
     "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.8",
-    "@types/node": "10.3.3",
-    "codelyzer": "4.3.0",
-    "concurrently": "3.5.1",
+    "@types/node": "10.3.5",
+    "codelyzer": "4.4.2",
+    "concurrently": "3.6.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "2.0.2",
+    "karma": "2.0.4",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "2.0.1",
@@ -83,11 +83,11 @@
     "modernizr": "3.6.0",
     "node-sass": "4.9.0",
     "npm-check-updates": "2.14.2",
-    "prettier": "1.13.5",
+    "prettier": "1.13.6",
     "protractor": "5.3.2",
-    "stylelint": "9.2.1",
+    "stylelint": "9.3.0",
     "stylelint-config-standard": "18.2.0",
-    "ts-node": "6.1.1",
+    "ts-node": "7.0.0",
     "tslint": "5.10.0",
     "tslint-config-prettier": "1.13.0",
     "typescript": "2.7.2",
