--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.6",
-    "@angular/cdk": "6.3.0",
-    "@angular/common": "6.0.6",
-    "@angular/compiler": "6.0.6",
-    "@angular/core": "6.0.6",
+    "@angular/animations": "6.0.9",
+    "@angular/cdk": "6.3.3",
+    "@angular/common": "6.0.9",
+    "@angular/compiler": "6.0.9",
+    "@angular/core": "6.0.9",
     "@angular/flex-layout": "6.0.0-beta.16",
-    "@angular/forms": "6.0.6",
-    "@angular/material": "6.3.0",
-    "@angular/platform-browser": "6.0.6",
-    "@angular/platform-browser-dynamic": "6.0.6",
-    "@angular/platform-server": "6.0.6",
-    "@angular/router": "6.0.6",
-    "@angular/upgrade": "6.0.6",
+    "@angular/forms": "6.0.9",
+    "@angular/material": "6.3.3",
+    "@angular/platform-browser": "6.0.9",
+    "@angular/platform-browser-dynamic": "6.0.9",
+    "@angular/platform-server": "6.0.9",
+    "@angular/router": "6.0.9",
+    "@angular/upgrade": "6.0.9",
     "@covalent/core": "1.0.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -41,7 +41,7 @@
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@webcomponents/custom-elements": "1.1.2",
     "angular-in-memory-web-api": "0.6.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "4.1.2",
     "clarity-angular": "0.10.28",
     "clarity-icons": "0.10.28",
     "clarity-ui": "0.10.28",
@@ -53,21 +53,21 @@
     "moment": "2.22.2",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "3.0.1",
-    "ngx-logger": "3.0.4",
-    "primeng": "6.0.0",
+    "ngx-logger": "3.0.5",
+    "primeng": "6.0.1",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.2.1",
+    "rxjs": "6.2.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.8",
     "@angular-devkit/core": "0.6.8",
     "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.6",
-    "@angular/language-service": "6.0.6",
+    "@angular/compiler-cli": "6.0.9",
+    "@angular/language-service": "6.0.9",
     "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.8",
-    "@types/node": "10.3.5",
+    "@types/node": "10.5.2",
     "codelyzer": "4.4.2",
     "concurrently": "3.6.0",
     "jasmine-core": "3.1.0",
@@ -77,20 +77,25 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-firefox-launcher": "1.1.0",
+    "karma-ie-launcher": "1.0.0",
     "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.1.0",
-    "lite-server": "2.3.0",
+    "karma-jasmine-html-reporter": "1.2.0",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-remap-istanbul": "0.6.0",
+    "lite-server": "2.4.0",
     "modernizr": "3.6.0",
-    "node-sass": "4.9.0",
+    "node-sass": "4.9.2",
     "npm-check-updates": "2.14.2",
-    "prettier": "1.13.6",
+    "prettier": "1.13.7",
     "protractor": "5.3.2",
     "stylelint": "9.3.0",
+    "stylelint-config-prettier": "3.3.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.0",
     "tslint": "5.10.0",
     "tslint-config-prettier": "1.13.0",
     "typescript": "2.7.2",
-    "webdriver-manager": "12.0.6"
+    "webdriver-manager": "12.1.0"
   }
 }
