--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "start": "ng serve --open",
     "stylelint": "stylelint --fix '**/*.scss' --syntax scss",
     "test": "ng test",
-    "test:all": "concurrently --kill-others-on-fail 'npm run lint' 'npm run stylelint' 'npm run test'"
+    "test:all": "npm run lint && npm run stylelint && npm run test'"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.0",
-    "@angular/cdk": "6.4.1",
-    "@angular/common": "6.1.0",
-    "@angular/compiler": "6.1.0",
-    "@angular/core": "6.1.0",
+    "@angular/animations": "6.1.2",
+    "@angular/cdk": "6.4.3",
+    "@angular/common": "6.1.2",
+    "@angular/compiler": "6.1.2",
+    "@angular/core": "6.1.2",
     "@angular/flex-layout": "6.0.0-beta.17",
-    "@angular/forms": "6.1.0",
-    "@angular/material": "6.4.1",
-    "@angular/platform-browser": "6.1.0",
-    "@angular/platform-browser-dynamic": "6.1.0",
-    "@angular/platform-server": "6.1.0",
-    "@angular/router": "6.1.0",
-    "@angular/upgrade": "6.1.0",
+    "@angular/forms": "6.1.2",
+    "@angular/material": "6.4.3",
+    "@angular/platform-browser": "6.1.2",
+    "@angular/platform-browser-dynamic": "6.1.2",
+    "@angular/platform-server": "6.1.2",
+    "@angular/router": "6.1.2",
+    "@angular/upgrade": "6.1.2",
     "@covalent/core": "1.0.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
     "@fortawesome/fontawesome-free-regular": "5.0.13",
     "@fortawesome/fontawesome-free-solid": "5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-    "@webcomponents/custom-elements": "1.1.3",
+    "@webcomponents/custom-elements": "1.2.0",
     "angular-in-memory-web-api": "0.6.1",
     "bootstrap": "4.1.3",
     "clarity-angular": "0.10.28",
@@ -55,26 +55,26 @@
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "3.0.1",
     "ngx-logger": "3.0.5",
-    "primeng": "6.0.2",
+    "primeng": "6.1.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.2.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.7.1",
-    "@angular-devkit/core": "0.7.1",
-    "@angular/cli": "6.1.1",
-    "@angular/compiler-cli": "6.1.0",
-    "@angular/language-service": "6.1.0",
+    "@angular-devkit/build-angular": "0.7.3",
+    "@angular-devkit/core": "0.7.3",
+    "@angular/cli": "6.1.3",
+    "@angular/compiler-cli": "6.1.2",
+    "@angular/language-service": "6.1.2",
     "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.8",
-    "@types/node": "10.5.4",
-    "codelyzer": "4.4.2",
+    "@types/node": "10.5.7",
+    "codelyzer": "4.4.3",
     "concurrently": "3.6.1",
-    "jasmine-core": "3.1.0",
+    "jasmine-core": "3.2.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "2.0.5",
+    "karma": "3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "2.0.1",
@@ -86,12 +86,12 @@
     "karma-remap-istanbul": "0.6.0",
     "lite-server": "2.4.0",
     "modernizr": "3.6.0",
-    "node-sass": "4.9.2",
+    "node-sass": "4.9.3",
     "npm-check-updates": "2.14.2",
-    "prettier": "1.13.7",
+    "prettier": "1.14.2",
     "protractor": "5.4.0",
     "stylelint": "9.4.0",
-    "stylelint-config-prettier": "3.3.0",
+    "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.0",
     "tslint": "5.11.0",
