--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "ng build",
+    "build": "ng build --prod --stats-json",
+    "bundle-report": "webpack-bundle-analyzer dist/stats.json",
     "doc:build": "compodoc -p src/tsconfig.app.json --theme 'material'",
     "doc:serve": "compodoc -s",
     "doc:buildandserve": "compodoc -p src/tsconfig.app.json --theme 'material' -s",
@@ -21,26 +22,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.7",
+    "@angular/animations": "6.1.9",
     "@angular/cdk": "6.4.7",
-    "@angular/common": "6.1.7",
-    "@angular/compiler": "6.1.7",
-    "@angular/core": "6.1.7",
+    "@angular/common": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/core": "6.1.9",
     "@angular/flex-layout": "6.0.0-beta.18",
-    "@angular/forms": "6.1.7",
+    "@angular/forms": "6.1.9",
     "@angular/material": "6.4.7",
-    "@angular/platform-browser": "6.1.7",
-    "@angular/platform-browser-dynamic": "6.1.7",
-    "@angular/platform-server": "6.1.7",
-    "@angular/router": "6.1.7",
-    "@angular/upgrade": "6.1.7",
-    "@covalent/core": "1.0.1",
+    "@angular/platform-browser": "6.1.9",
+    "@angular/platform-browser-dynamic": "6.1.9",
+    "@angular/platform-server": "6.1.9",
+    "@angular/router": "6.1.9",
+    "@angular/upgrade": "6.1.9",
+    "@covalent/core": "2.0.0-beta.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
     "@fortawesome/fontawesome-free-regular": "5.0.13",
     "@fortawesome/fontawesome-free-solid": "5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
-    "@webcomponents/custom-elements": "1.2.0",
+    "@webcomponents/custom-elements": "1.2.1",
     "angular-in-memory-web-api": "0.6.1",
     "bootstrap": "4.1.3",
     "clarity-angular": "0.10.28",
@@ -48,28 +49,28 @@
     "clarity-ui": "0.10.28",
     "core-js": "2.5.7",
     "es6-shim": "0.35.3",
-    "flag-icon-css": "3.0.0",
+    "flag-icon-css": "3.2.0",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
     "moment": "2.22.2",
     "mutationobserver-shim": "0.3.2",
     "ngx-bootstrap": "3.0.1",
-    "ngx-logger": "3.1.0",
+    "ngx-logger": "3.3.3",
     "primeng": "6.1.4",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.3.2",
+    "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.8.2",
-    "@angular-devkit/core": "0.8.2",
-    "@angular/cli": "6.2.2",
-    "@angular/compiler-cli": "6.1.7",
-    "@angular/language-service": "6.1.7",
+    "@angular-devkit/build-angular": "0.8.4",
+    "@angular-devkit/core": "0.8.4",
+    "@angular/cli": "6.2.4",
+    "@angular/compiler-cli": "6.1.9",
+    "@angular/language-service": "6.1.9",
     "@compodoc/compodoc": "1.1.5",
-    "@types/jasmine": "2.8.8",
-    "@types/node": "10.10.1",
-    "codelyzer": "4.4.4",
+    "@types/jasmine": "2.8.9",
+    "@types/node": "10.11.4",
+    "codelyzer": "4.5.0",
     "concurrently": "4.0.1",
     "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
@@ -88,15 +89,16 @@
     "modernizr": "3.6.0",
     "node-sass": "4.9.3",
     "npm-check-updates": "2.14.2",
-    "prettier": "1.14.2",
+    "prettier": "1.14.3",
     "protractor": "5.4.1",
-    "stylelint": "9.5.0",
+    "stylelint": "9.6.0",
     "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
     "typescript": "2.9.2",
-    "webdriver-manager": "12.1.0"
+    "webdriver-manager": "12.1.0",
+    "webpack-bundle-analyzer": "3.0.2"
   }
 }
