--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.0.0",
-    "@angular/cdk": "7.0.0",
-    "@angular/common": "7.0.0",
-    "@angular/compiler": "7.0.0",
-    "@angular/core": "7.0.0",
+    "@angular/animations": "7.0.2",
+    "@angular/cdk": "7.0.2",
+    "@angular/common": "7.0.2",
+    "@angular/compiler": "7.0.2",
+    "@angular/core": "7.0.2",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "7.0.0",
-    "@angular/material": "7.0.0",
-    "@angular/platform-browser": "7.0.0",
-    "@angular/platform-browser-dynamic": "7.0.0",
-    "@angular/platform-server": "7.0.0",
-    "@angular/router": "7.0.0",
-    "@angular/upgrade": "7.0.0",
+    "@angular/forms": "7.0.2",
+    "@angular/material": "7.0.2",
+    "@angular/platform-browser": "7.0.2",
+    "@angular/platform-browser-dynamic": "7.0.2",
+    "@angular/platform-server": "7.0.2",
+    "@angular/router": "7.0.2",
+    "@angular/upgrade": "7.0.2",
     "@covalent/core": "2.0.0-beta.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -42,60 +42,58 @@
     "@fortawesome/fontawesome-free-solid": "5.0.13",
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@webcomponents/custom-elements": "1.2.1",
-    "angular-in-memory-web-api": "0.6.1",
     "bootstrap": "4.1.3",
     "clarity-angular": "0.10.28",
     "clarity-icons": "0.10.28",
     "clarity-ui": "0.10.28",
     "core-js": "2.5.7",
-    "es6-shim": "0.35.3",
-    "flag-icon-css": "3.2.0",
+    "es6-shim": "0.35.4",
+    "flag-icon-css": "3.2.1",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
     "moment": "2.22.2",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "3.0.1",
-    "ngx-logger": "3.3.3",
-    "primeng": "6.1.5",
+    "ngx-bootstrap": "3.1.1",
+    "ngx-logger": "3.3.6",
+    "primeng": "7.0.0-beta.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.1",
-    "@angular-devkit/core": "7.0.1",
-    "@angular/cli": "7.0.1",
-    "@angular/compiler-cli": "7.0.0",
-    "@angular/language-service": "7.0.0",
-    "@compodoc/compodoc": "1.1.5",
+    "@angular-devkit/build-angular": "0.10.4",
+    "@angular-devkit/core": "7.0.4",
+    "@angular/cli": "7.0.4",
+    "@angular/compiler-cli": "7.0.2",
+    "@angular/language-service": "7.0.2",
+    "@compodoc/compodoc": "1.1.6",
     "@types/jasmine": "2.8.9",
-    "@types/node": "10.12.0",
+    "@types/node": "10.12.2",
     "codelyzer": "4.5.0",
-    "jasmine-core": "3.2.1",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "3.0.0",
+    "karma": "3.1.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-firefox-launcher": "1.1.0",
     "karma-ie-launcher": "1.0.0",
     "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.3.1",
+    "karma-jasmine-html-reporter": "1.4.0",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-remap-istanbul": "0.6.0",
     "modernizr": "3.6.0",
     "node-sass": "4.9.4",
-    "npm-check-updates": "2.14.2",
     "prettier": "1.14.3",
     "protractor": "5.4.1",
-    "stylelint": "9.6.0",
+    "stylelint": "9.7.1",
     "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
-    "typescript": "3.1.3",
+    "typescript": "3.1.6",
     "webpack-bundle-analyzer": "3.0.3"
   }
 }
