--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.0.4",
-    "@angular/cdk": "7.0.4",
-    "@angular/common": "7.0.4",
-    "@angular/compiler": "7.0.4",
-    "@angular/core": "7.0.4",
+    "@angular/animations": "7.1.0",
+    "@angular/cdk": "7.1.0",
+    "@angular/common": "7.1.0",
+    "@angular/compiler": "7.1.0",
+    "@angular/core": "7.1.0",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "7.0.4",
-    "@angular/material": "7.0.4",
-    "@angular/platform-browser": "7.0.4",
-    "@angular/platform-browser-dynamic": "7.0.4",
-    "@angular/platform-server": "7.0.4",
-    "@angular/router": "7.0.4",
-    "@angular/upgrade": "7.0.4",
+    "@angular/forms": "7.1.0",
+    "@angular/material": "7.1.0",
+    "@angular/platform-browser": "7.1.0",
+    "@angular/platform-browser-dynamic": "7.1.0",
+    "@angular/platform-server": "7.1.0",
+    "@angular/router": "7.1.0",
+    "@angular/upgrade": "7.1.0",
     "@covalent/core": "2.0.0-beta.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
@@ -53,22 +53,22 @@
     "lodash": "4.17.11",
     "moment": "2.22.2",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "3.1.1",
+    "ngx-bootstrap": "3.1.2",
     "ngx-logger": "3.3.6",
-    "primeng": "7.0.0-beta.1",
+    "primeng": "7.0.0-rc.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.6",
-    "@angular-devkit/core": "7.0.6",
-    "@angular/cli": "7.0.6",
-    "@angular/compiler-cli": "7.0.4",
-    "@angular/language-service": "7.0.4",
+    "@angular-devkit/build-angular": "0.11.0",
+    "@angular-devkit/core": "7.1.0",
+    "@angular/cli": "7.1.0",
+    "@angular/compiler-cli": "7.1.0",
+    "@angular/language-service": "7.1.0",
     "@compodoc/compodoc": "1.1.6",
-    "@types/jasmine": "2.8.11",
-    "@types/node": "10.12.9",
+    "@types/jasmine": "3.3.0",
+    "@types/node": "10.12.10",
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -79,7 +79,7 @@
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-firefox-launcher": "1.1.0",
     "karma-ie-launcher": "1.0.0",
-    "karma-jasmine": "2.0.0",
+    "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-remap-istanbul": "0.6.0",
@@ -92,7 +92,7 @@
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
-    "tslint-config-prettier": "1.16.0",
+    "tslint-config-prettier": "1.17.0",
     "typescript": "3.1.6",
     "webpack-bundle-analyzer": "3.0.3"
   }
