--- a/package.json
+++ b/package.json
@@ -22,20 +22,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.0",
-    "@angular/cdk": "7.1.0",
-    "@angular/common": "7.1.0",
-    "@angular/compiler": "7.1.0",
-    "@angular/core": "7.1.0",
+    "@angular/animations": "7.1.3",
+    "@angular/cdk": "7.1.1",
+    "@angular/common": "7.1.3",
+    "@angular/compiler": "7.1.3",
+    "@angular/core": "7.1.3",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "7.1.0",
-    "@angular/material": "7.1.0",
-    "@angular/platform-browser": "7.1.0",
-    "@angular/platform-browser-dynamic": "7.1.0",
-    "@angular/platform-server": "7.1.0",
-    "@angular/router": "7.1.0",
-    "@angular/upgrade": "7.1.0",
-    "@covalent/core": "2.0.0-beta.1",
+    "@angular/forms": "7.1.3",
+    "@angular/material": "7.1.1",
+    "@angular/platform-browser": "7.1.3",
+    "@angular/platform-browser-dynamic": "7.1.3",
+    "@angular/platform-server": "7.1.3",
+    "@angular/router": "7.1.3",
+    "@angular/upgrade": "7.1.3",
+    "@clr/angular": "^1.0.1",
+    "@clr/icons": "1.0.1",
+    "@clr/ui": "1.0.1",
+    "@covalent/core": "2.0.0-rc.1",
     "@fortawesome/fontawesome": "1.1.8",
     "@fortawesome/fontawesome-free-brands": "5.0.13",
     "@fortawesome/fontawesome-free-regular": "5.0.13",
@@ -43,39 +46,37 @@
     "@fortawesome/fontawesome-free-webfonts": "1.0.9",
     "@webcomponents/custom-elements": "1.2.1",
     "bootstrap": "4.1.3",
-    "clarity-angular": "0.10.28",
-    "clarity-icons": "0.10.28",
-    "clarity-ui": "0.10.28",
-    "core-js": "2.5.7",
+    "core-js": "2.6.0",
     "es6-shim": "0.35.4",
     "flag-icon-css": "3.2.1",
     "jquery": "3.3.1",
     "lodash": "4.17.11",
-    "moment": "2.22.2",
+    "moment": "2.23.0",
     "mutationobserver-shim": "0.3.2",
-    "ngx-bootstrap": "3.1.2",
-    "ngx-logger": "3.3.6",
-    "primeng": "7.0.0-rc.1",
+    "ngx-bootstrap": "3.1.3",
+    "ngx-logger": "3.3.7",
+    "npm": "^6.5.0",
+    "primeng": "7.0.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.11.0",
-    "@angular-devkit/core": "7.1.0",
-    "@angular/cli": "7.1.0",
-    "@angular/compiler-cli": "7.1.0",
-    "@angular/language-service": "7.1.0",
-    "@compodoc/compodoc": "1.1.6",
-    "@types/jasmine": "3.3.0",
-    "@types/node": "10.12.10",
+    "@angular-devkit/build-angular": "0.11.3",
+    "@angular-devkit/core": "7.1.3",
+    "@angular/cli": "7.1.3",
+    "@angular/compiler-cli": "7.1.3",
+    "@angular/language-service": "7.1.3",
+    "@compodoc/compodoc": "1.1.7",
+    "@types/jasmine": "3.3.1",
+    "@types/node": "10.12.15",
     "codelyzer": "4.5.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "jshint-stylish": "2.2.1",
-    "karma": "3.1.1",
+    "karma": "3.1.3",
     "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
+    "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-firefox-launcher": "1.1.0",
     "karma-ie-launcher": "1.0.0",
@@ -84,10 +85,10 @@
     "karma-phantomjs-launcher": "1.0.4",
     "karma-remap-istanbul": "0.6.0",
     "modernizr": "3.6.0",
-    "node-sass": "4.10.0",
-    "prettier": "1.15.2",
+    "node-sass": "4.11.0",
+    "prettier": "1.15.3",
     "protractor": "5.4.1",
-    "stylelint": "9.8.0",
+    "stylelint": "9.9.0",
     "stylelint-config-prettier": "4.0.0",
     "stylelint-config-standard": "18.2.0",
     "ts-node": "7.0.1",
